Fixed css layout issues with containers, added more content

--- a/css.css
+++ b/css.css
@@ -1,100 +1,215 @@
 * {
-    box-sizing: border-box;
-    font-family: brandon-grotesque, sans-serif;
+  box-sizing: border-box;
+  font-family: brandon-grotesque, sans-serif;
+  color: grey;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    /* font-family: brandon-grotesque, sans-serif; */
-    font-style: normal;
-    font-size: 16px;
+  font-style: normal;
+  /* font-size: 16px; */
+  margin: 0px;
 }
 
 img {
-    max-width: 100%;
-    max-height: 640px;
+  max-width: 100%;
+  max-height: 640px;
 }
 
 a {
-    color: grey;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #header {
-    display: block;
-    width: auto;
-    height: 64px;
-    position: relative;
-    /* background-color: #606060; */
+  display: block;
+  width: auto;
+  height: 64px;
+  position: relative;
 }
-
+.kaneLink {
+  color: red;
+}
 .menuButtonLeft {
-    font-weight: 500;
-    color: grey;
-    float: left;
-    padding: 20px 30px 20px 10px;
+  font-weight: 500;
+  float: left;
+  padding: 20px 30px 20px 10px;
 }
-
 .menuButtonRight {
-    font-weight: 500;
-    color: grey;
-    float: right;
-    padding: 20px 30px 20px 0px;
+  font-weight: 500;
+  float: right;
+  padding: 20px 30px 20px 0px;
 }
 
 .basketImage {
-    height: 18px;
-    float: right;
-    position: relative;
-    padding-right: 20px;
+  height: 18px;
+  float: right;
+  position: relative;
+  padding-right: 20px;
 }
 
 .productRangePic {
-    height: auto;
-    width: 100%;
-    clear: right;
-    position: relative;
+  height: auto;
+  width: 100%;
+  position: relative;
 }
 
 .howItWorksSection {
-    padding-top: 50px;
-    /* background-color: gray; */
+  padding-top: 50px;
+  height: auto;
 }
 
-.howItWorksHeader {
-    text-align: center;
-    font-size: 25px;
+.headerText {
+  text-align: center;
+  font-size: 1.5vw;
 }
 
 .explanationRow {
-    margin: auto;
-    width: 80vw;
-    height: 50vh;
-    background-color: red
+  display: flex;
+  margin: auto;
+  width: 55vw;
+  height: auto;
 }
 
 .explanationTile {
-    margin: 3vw;
-    display: inline-block;
-    background-color: gray;
-    width: 20vw;
-    height: 300px;
+  position: relative;
+  margin: 3vw;
+  display: inline-block;
+  width: 20vw;
+  height: auto;
 }
 
 .explanationPic {
-    margin: 0vw auto;
-    width: 10vw;
+  margin: auto;
+  width: 100px;
 }
 
 .explanationHeader {
-    margin: 2vw 0vw;
-    text-align: center;
-    width: 20vw;
-    font-size: 18px;
+  margin: 2vw 0vw;
+  text-align: center;
+  font-size: 1vw;
+  font-weight: 500;
 }
 
 .explanationText {
-    margin: 2vw 0vw;
-    text-align: center;
-    width: 20vw;
-    font-size: 18px;
+  margin: 2vw 0vw;
+  text-align: center;
+  font-size: 1vw;
+  font-weight: 300;
+}
+
+.videoLoop {
+  height: auto;
+  width: 100%;
+  position: relative;
+  display: block;
+  margin-bottom: 50px;
+}
+
+.video {
+  margin: 2vw 0vw;
+  width: 100%;
+  position: relative;
+}
+.razorCloseUpRow {
+  display: flex;
+  background-color: red;
+  width: 100%;
+  position: relative;
+  margin: 0px 0px 50px 0px;
+}
+.closeUpContainer {
+  display: flex;
+  margin: 0 auto;
+  width: 80vw;
+  height: auto;
+  max-height: 700px;
+  */padding: 5vw;
+}
+
+.razorImage {
+  width: 40vw;
+  max-height: 320px;
+  height: auto;
+  float: left;
+}
+.meetHarrysList {
+  width: 30vw;
+  height: auto;
+  float: left;
+  padding-left: 30px;
+}
+
+.meetHarrysItems {
+  text-align: left;
+  width: 35vw;
+  font-size: 20px;
+  font-weight: 300;
+}
+ul {
+  padding: 0px;
+}
+li {
+  text-align: left;
+}
+.meetHarrysHeader {
+  font-size: 3vw;
+  text-align: left;
+  display: block;
+  width: 100%;
+  margin: 0px 0px 10px 0px;
+}
+.shopNowLink {
+  font-size: 20px;
+  margin-top: 20px;
+  color: black;
+  text-decoration: underline;
+  text-align: left;
+}
+.shoppingTileContainer {
+  display: block;
+  margin: 0px 0px 50px 0px;
+}
+
+.twoShoppingTiles {
+  display: flex;
+  background-color: red;
+  height: auto;
+  width: 100%;
+  /* min-height: 600px; */
+  position: relative;
+  /* height: 600px; */
+}
+
+.image {
+  float: left;
+}
+.featuredProducts {
+  display: block;
+  width: 100%;
+}
+.headerTextFeatured {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 0px 0px 30px 0px;
+}
+
+.featuredProductsSubheader {
+  text-align: center;
+}
+
+/* Work on relevant classes and content from here */
+
+.featuredTileContainer {
+  position: relative;
+  margin: 3vw;
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.featuredTile {
+  margin: auto;
+  float: left;
+  display: inline-block;
+  width: 25%;
 }
